--- a/pyramidstarter/static/sitewide.css
+++ b/pyramidstarter/static/sitewide.css
@@ -75,3 +75,11 @@ th.th-rotated > div > span {
 .purine{}
 .pyrimine{}
 .transversion{}
+
+.vertical-center {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
+}
